--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
         <title>my website</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
+    <body>  
         <h1 id="website-title">my resume</h1>
         <br />
-        <div class="container">
-            <p id="box" class="red-text font-bold">
-            sddsdsadsadadasdsadssdadsadaaadasdadasdsadadaassaaaaa
-            </p>
+        <img class="center" id="image-size" src="./yee.webp" alt="yee image">
+        <br />
+        <div id="box" class="font-size">
             <p>
-            <span>S</span>ddsdsadsadadasdsadssdadsadaaadasdadasdsadadaasssss
+                NAME : <span>S</span>upakorn <span>V</span>achirapoosit
             </p>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=VEvnZJuJFymejiPu" target="_blank">MY YEET</a>
         </div>
-        <img src="./yee.webp" alt="yee image">
-        <a href="http://google.com" target="_blank">my yeet</a>
     </body>
 </html>
